--- a/voluntariados.html
+++ b/voluntariados.html
@@ -1,14 +1,44 @@
-<!DOCTYPE html><html lang='es'><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Voluntariados – IncunetSpaces</title><link rel='stylesheet' href='style.css'></head><body><header class='topbar'>
-  <div class='logo'>Incunet<span>Spaces</span></div>
-  <nav class='nav-links'>
-    <a href='index.html'>Inicio</a>
-    <a href='voluntariados.html'>Voluntariados</a>
-    <a href='organizaciones.html'>Organizaciones</a>
-    <a href='quienes.html'>Quiénes Somos</a>
-    <a href='api.html'>APIs</a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Voluntariados – IncunetSpaces</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="topbar">
+    <div class="logo">Incunet<span>Spaces</span></div>
+    <nav class="nav-links">
+      <a href="index.html">Inicio</a>
+      <a href="voluntariados.html" class="active">Voluntariados</a>
+      <a href="organizaciones.html">Organizaciones</a>
+      <a href="quienes.html">Quiénes Somos</a>
+      <a href="api.html">APIs</a>
+    </nav>
+    <div class="nav-actions">
+      <button id="theme-toggle" class="hamburger">Modo AMOLED</button>
+      <button id="menu-toggle" class="hamburger">☰</button>
+    </div>
+  </header>
+
+  <nav id="mobile-menu" class="mobile-menu">
+    <a href="index.html">Inicio</a>
+    <a href="voluntariados.html">Voluntariados</a>
+    <a href="organizaciones.html">Organizaciones</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="api.html">APIs</a>
   </nav>
-  <div class='nav-actions'>
-    <button id='theme-toggle' class='hamburger' aria-label='Cambiar tema'>Modo AMOLED</button>
-    <button id='menu-toggle' class='hamburger' aria-label='Abrir menú'>☰</button>
-  </div>
-</header><main class='container'><div id='lista-vol'></div></main><script src='script.js'></script></body></html>
+
+  <main class="container">
+    <div class="section-title">
+      <h2>Voluntariados Disponibles</h2>
+      <input id="filtro" class="search" placeholder="Buscar voluntariado..." />
+    </div>
+    <div id="lista-vol" class="grid"></div>
+  </main>
+
+  <footer class="footer"><p>© 2025 IncunetSpaces</p></footer>
+  <script src="script.js"></script>
+</body>
+</html>
