--- a/quienes.html
+++ b/quienes.html
@@ -1,14 +1,63 @@
-<!DOCTYPE html><html lang='es'><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><title>Quiénes Somos – IncunetSpaces</title><link rel='stylesheet' href='style.css'></head><body><header class='topbar'>
-  <div class='logo'>Incunet<span>Spaces</span></div>
-  <nav class='nav-links'>
-    <a href='index.html'>Inicio</a>
-    <a href='voluntariados.html'>Voluntariados</a>
-    <a href='organizaciones.html'>Organizaciones</a>
-    <a href='quienes.html'>Quiénes Somos</a>
-    <a href='api.html'>APIs</a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quiénes Somos – IncunetSpaces</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="topbar">
+    <div class="logo">Incunet<span>Spaces</span></div>
+    <nav class="nav-links">
+      <a href="index.html">Inicio</a>
+      <a href="voluntariados.html">Voluntariados</a>
+      <a href="organizaciones.html">Organizaciones</a>
+      <a href="quienes.html" class="active">Quiénes Somos</a>
+      <a href="api.html">APIs</a>
+    </nav>
+    <div class="nav-actions">
+      <button id="theme-toggle" class="hamburger">Modo AMOLED</button>
+      <button id="menu-toggle" class="hamburger">☰</button>
+    </div>
+  </header>
+
+  <nav id="mobile-menu" class="mobile-menu">
+    <a href="index.html">Inicio</a>
+    <a href="voluntariados.html">Voluntariados</a>
+    <a href="organizaciones.html">Organizaciones</a>
+    <a href="quienes.html">Quiénes Somos</a>
+    <a href="api.html">APIs</a>
   </nav>
-  <div class='nav-actions'>
-    <button id='theme-toggle' class='hamburger' aria-label='Cambiar tema'>Modo AMOLED</button>
-    <button id='menu-toggle' class='hamburger' aria-label='Abrir menú'>☰</button>
-  </div>
-</header><main class='container'><h2>Quiénes Somos</h2></main><script src='script.js'></script></body></html>
+
+  <main class="container">
+    <div class="section-title"><h2>Nuestra misión</h2></div>
+    <section class="grid">
+      <article class="card reveal">
+        <div class="content">
+          <span class="badge">Propósito</span>
+          <h3>Conectar para transformar</h3>
+          <p>Unimos a personas con ganas de ayudar con organizaciones y proyectos que lo necesitan.</p>
+        </div>
+      </article>
+      <article class="card reveal">
+        <div class="content">
+          <span class="badge">Valores</span>
+          <h3>Humanos y sostenibles</h3>
+          <p>Inclusión, impacto social, sostenibilidad y transparencia.</p>
+        </div>
+      </article>
+      <article class="card reveal">
+        <div class="content">
+          <span class="badge">Participa</span>
+          <h3>Únete</h3>
+          <p>Explora voluntariados, elige una causa y súmate.</p>
+        </div>
+      </article>
+    </section>
+  </main>
+
+  <footer class="footer"><p>© 2025 IncunetSpaces</p></footer>
+  <script src="script.js"></script>
+</body>
+</html>
