--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <a href="api.html">APIs</a>
     </nav>
     <div class="nav-actions">
-      <button id="theme-toggle" class="hamburger" aria-label="Cambiar tema">Modo AMOLED</button>
-      <button id="menu-toggle" class="hamburger" aria-label="Abrir menú">☰</button>
+      <button id="theme-toggle" class="hamburger">Modo AMOLED</button>
+      <button id="menu-toggle" class="hamburger">☰</button>
     </div>
   </header>
 
@@ -35,7 +35,7 @@
       <div>
         <span class="badge">Plataforma Social</span>
         <h1>Incunet<span style="color:#00aaff">Spaces</span></h1>
-        <p>Conectamos personas con <b>voluntariados</b> y <b>organizaciones</b>. Diseño glass + neumorphism, con modo AMOLED / Azul cielo.</p>
+        <p>Conectamos personas con <b>voluntariados</b> y <b>organizaciones</b>. Diseño glass + neumorphism con modo AMOLED / Azul cielo.</p>
         <div class="ctas">
           <a class="btn" href="voluntariados.html">Explorar Voluntariados</a>
           <a class="btn alt" href="organizaciones.html">Ver Organizaciones</a>
@@ -46,7 +46,6 @@
   </main>
 
   <footer class="footer"><p>© 2025 IncunetSpaces</p></footer>
-
   <script src="script.js"></script>
 </body>
 </html>
